--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <script> 
     $(function(){
       $("#header").load("templates/header.html"); 
-      $("#footer").load("templates/footer.html"); 
+      $("#footer").load("templates/footer.html");
     });
     </script> 
 </head>
 <body>
     <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
     <div class = "columnn left">
-
+      <div class = "card"></div>
     </div>
     <div class = "columnn right">
                
