--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <body>
     <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
     <div class = "columnn left">
-      <div class = "card"></div>
+      <div class = "card">
+        <img src="">
+        <div style="text-align: center;">Title</div>
+        <div>Artical Discription</div>
+        
+      </div>
     </div>
     <div class = "columnn right">
                
