--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class = "columnn left">
       <div class = "card" align = "center";> 
         <img src="">
-        <div style="text-align: center;">Title</div>
+        <div style="text-align: center";>Title</div>
         <div>Artical Discription</div>
         
       </div>
