--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
     <div class = "columnn left">
-      <div class = "card"; align = "center"> <!--this is a comment-->
+      <div class = "card" align="center"> <!--this is a comment-->
         <img src="">
         <div style="text-align: center";>Title</div>
         <div>Artical Discription</div>
