Added an image for testing artical cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
     <div class = "columnn left">
       <div class = "card" align="center"> <!--this is a comment-->
-        <img src="">
+        <img src="images/ZigZag1.png">
         <div style="text-align: center";>Title</div>
         <div>Artical Discription</div>
         
