--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       <div class = "card" align="center"> <!--this is a comment-->
         <br>
         <img src="images/ZigZag1.png">
-        <div style="text-align: center";>Title</div>
-        <div>Artical Discription</div>
-        
+        <div style="text-align: center";>ZigZag one day build</div>
+        <div>BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. </div>
+        <br>
       </div>
+      <br>
     </div>
     <div class = "columnn right">
                
