added padding to cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <img src="images/ZigZag1.png">
         <div style="text-align: center";>ZigZag one day build</div>
-        <div>BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. </div>
+        <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. </div>
         <br>
       </div>
       <br>
