--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 <body>
     <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
     <div class = "columnn left">
+      <br>
       <div class = "card" align="center"> <!--this is a comment-->
         <br>
         <img src="images/ZigZag1.png">
         <div style="text-align: center";>ZigZag one day build</div>
-        <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. </div>
+        <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. Now we challenge you to do the same and send us what you get done.</div>
+        <a href ="">Read More >>></a>
         <br>
       </div>
       <br>
