--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br>
         <img src="images/ZigZag1.png">
         <div style="text-align: center";>ZigZag one day build</div>
-        <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. Now we challenge you to do the same and send us what you get done.</div>
+        <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. Now we challenge you to do the same and send us what you get done in 12 hours.</div>
         <a href ="">Read More >>></a>
         <br>
       </div>
