--- a/mainpages/articals/ZigZag.html
+++ b/mainpages/articals/ZigZag.html
@@ -19,9 +19,13 @@
 </head>
 <body>
     <div id = "header"></div> <!--this will load code for the header @templates\footer.html -->
-    <div class="content">
-        <h3>BOB450 made this game in less than 12 hours. Everything in this game is custom made, including the art. He used Creta and GIMP to make the game sprites. In this game you are a player with rocket boots, trying to dodge the floating islands flying at you. You are always moving eather up or down, you can't stop. You lose and must restart if you hit one of the islands or fly off the screen. You score a point every 3 seconds, and the high score is 10 points or thirty seconds. I think this is a great oportunity for anyone who reads this to try to do the same, and send us a link to a github page with the code. If you turn in something we like, we may write about it.</h3> 
-    </div>
+    
+    <div class = "columnn left">
+        <div class="content">
+            <h3>BOB450 made this game in less than 12 hours. Everything in this game is custom made, including the art. He used Creta and GIMP to make the game sprites. In this game you are a player with rocket boots, trying to dodge the floating islands flying at you. You are always moving eather up or down, you can't stop. You lose and must restart if you hit one of the islands or fly off the screen. You score a point every 3 seconds, and the high score is 10 points or thirty seconds. I think this is a great oportunity for anyone who reads this to try to do the same, and send us a link to a github page with the code. If you turn in something we like, we may write about it.</h3> 
+        </div>
+    </div>      
+    <div class = "columnn right">
                
     </div>
     <div id = "footer">
