--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
   </script>
+  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script> 
     $(function(){
       $("#header").load("templates/header.html"); 
