Fixed a bug with template loading

--- a/mainpages/articals/prettyprint.html
+++ b/mainpages/articals/prettyprint.html
@@ -19,8 +19,8 @@
 
   <script> 
     $(function(){
-      $("#header").load("templates/header.html"); 
-      $("#footer").load("templates/footer.html"); 
+      $("#header").load("https://thecomputerlab.github.io/templates/header.html"); 
+      $("#footer").load("https://thecomputerlab.github.io/templates/footer.html"); 
     });
     </script> 
 
