--- a/mainpages/articals/prettyprint.html
+++ b/mainpages/articals/prettyprint.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/mainpage.css">
+    <link rel="stylesheet" href="https://thecomputerlab.github.io/css/mainpage.css">
+    
 
     <meta charset="UTF-8">
 
