Linked Google PrettyPrint artical

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <div class="content">BOB450 challenged himself to make a game in one day, to see how much he could get done. In addition, he tried to look up as little as posible, and he made all of the art for the game too. Now we challenge you to do the same and send us what you get done in 12 hours.</div>
         <a href ="https://thecomputerlab.github.io/mainpages/articals/ZigZag.html">Read More >>></a>
         <br>
+        <div class = "card" align="center"> <!--this is a comment-->
+          <br>
+          <img src="images/PrettyPrint.PNG">
+          <div style="text-align: center";>Google Pretty Print</div>
+          <div class="content">Google prettyprint is a js library included on our website. Come read about what it does for us and how to use it on your own website.</div>
+          <a href ="https://thecomputerlab.github.io/mainpages/articals/prettyprint.html">Read More >>></a>
+          <br>
+        </div>
+        <br>
       </div>
       <br>
     </div>
